<resources>
    <string name="app_name">BaseJavaAndroid</string>
    <string name="notification_channel_id">notificationFirebase</string>
    <string name="msg_token_fmt">tokenNotifi</string>
    <string name="whatBMI">BMI là gì ?</string>
    <string name="bmi_detail">Chỉ số BMI là chỉ số cân nặng (hay chỉ số khối cơ thể) viết tắt của từ Body Mass Index - được dùng để đánh giá mức độ gầy hay béo của một người. Chỉ số này do nhà khoa học người Bỉ Adolphe Quetelet đưa ra năm 1832.
\n\n Chỉ số BMI được sử dụng như một công cụ tầm soát để xác định trọng lượng cơ thể bạn. Từ các số liệu mà nó tính toán, bạn sẽ biết được mình đang thừa cân hay thiếu cân, hay là một người có body chuẩn.\n\nĐây là phương pháp đơn giản nhất và chính xác nhất được sử dụng phổ biến trên thế giớ, giúp xác định trọng lượng tối ưu cho cả nam và nữ ở độ tuổi từ 20-65, trừ phụ nữ mang thai và cho con bú, vận động viên</string>
    <string name="bmi_step_detail">Để tính BMI, bạn sẽ được yêu cầu cho biết về chiều cao và cân nặng, dựa vào công thức có sẵn để tính ra chỉ số khối cơ thể mình. \n Chỉ số BMI thường nằm trong khoảng từ 15/60. Tuy nhiên theo WHO thì chỉ số BMI chuẩn nhất là nằm trong khoảng từ 18.5 đến 24.9</string>
    <string name="muoitamphay5"><![CDATA[<18.5]]></string>
    <string name="hisory">Lịch sử</string>
    <string name="welcomHelth">Chào mừng bạn đến với Sức khỏe của Aeonmaill LifeStyle</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque in nunc ut metus ullamcorper posuere condimentum sit amet mi. Aenean ut purus volutpat, pellentesque eros rutrum, ultrices lectus</string>
    <string name="tittleHSSK">Hồ sơ sức khỏe</string>
    <string name="weightHeight">1m68, 100kg</string>
    <string name="time">12:00 12/12/2021</string>
    <string name="tittleBMI">Chỉ số BMI</string>
    <string name="tittleCalo">Đếm bước và Calorie</string>
    <string name="caloAndStep">7234/7500 bước, 234 Kcal</string>
    <string name="myInfor">Thông tin cá nhân</string>
    <string name="name">Tên</string>
    <string name="sontit">Trần Văn Sơn</string>
    <string name="weight">Cân nặng</string>
    <string name="height">Chiều cao</string>
    <string name="tagets">Mục tiêu</string>
    <string name="step">Số bước mỗi ngày</string>
    <string name="bmi">BMI</string>
    <string name="bangtinhBMI">Bảng tính BMI</string>
    <string name="update">Cập nhật</string>
    <string name="history">Lịch sử</string>
    <string-array name="gender_array">
        <item>Nam</item>
        <item>Nữ</item>
    </string-array>
    <string name="bmi_history_toolbar_title">Lịch sử BMI</string>
    <string name="bmi_index_type_flat">Thiếu cân</string>
    <string name="bmi_index_type_normal">Bình thường</string>
    <string name="bmi_index_type_over_weight">Thừa cân</string>
    <string name="bmi_index_type_over">Béo phì</string>

    <!--    Challenge-->
    <string name="challenge_list_chall">Danh sách thử thách</string>
    <string name="challenge_my_chall">Thử thách của tôi</string>
    <string name="challenge_lifestyle_chall">Thử thách Lifestyle</string>
    <string name="sex">Giới tính</string>
    <string name="HowToBMI">Cách đo chí số BMI như thế nào?</string>
    <string name="savetohistory">Lưu vào lịch sử</string>
    <string name="caculateBMI">Tính BMI</string>
    <string name="flower">flower</string>
    <string name="heart">heart</string>
    <string name="score">0</string>
    <string name="coverImage">coverImage</string>
    <string name="kg">kg</string>
    <string name="_178">178</string>
    <string name="_60">60</string>
    <string name="cm">cm</string>
    <string name="chisobmi">Chỉ số BMI</string>
    <string name="phanloai">Phân Loại</string>
    <string name="thieucan">Thiếu cân</string>
    <string name="rangeWeight1">18.5 - 24.9</string>
    <string name="nomarl">Bình thường</string>
    <string name="rangeWeight2">25 - 29.9</string>
    <string name="thuacan">Thừa cân</string>
    <string name="rangeWeight3">30 - 34.9</string>
    <string name="rangeWeight4">Béo phì cấp độ I</string>
    <string name="rangeWeight5">35 - 39.9</string>
    <string name="beophi1">Béo phì cấp độ II</string>
    <string name="rangeWeight6"><![CDATA[>40]]></string>
    <string name="beophi3">Béo phì cấp độ III</string>
    <string name="beophi2">Béo phì cấp độ II</string>
    <string name="health">Sức khỏe</string>
    <string name="myprofile">Hồ sơ sức khỏe của tôi</string>
    <string name="tinnhBmi">Tính BMI</string>
    <string name="rangeWeight40"><![CDATA[>40.0]]></string>
    <string name="updateSuccess">Cập nhật thành công</string>
    <string name="beophi">Béo phì</string>
    <string name="saveHistorySuccess">Lưu vào lịch sử thành công !</string>
    <string name="notEmpty">Không được bỏ trống trường nào !</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="edtprf_height_empty">Cân nặng không được bỏ trống</string>
    <string name="heightMoreZero">Chiều cao phải lớn hơn 0</string>
    <string name="weightMoreZero">Cân nặng phải lớn hơn 0</string>
    <string name="bmiMoreZero">Chỉ số BMI phải lớn hơn 0</string>
    <string name="stepMoreZero">Số bước phải lớn hơn 0</string>
    <string name="steps">bước</string>
    <string name="mustHasValue">Bạn cần nhập đủ thông tin cân nặng và chiều cao</string>
    <string name="noDataReturn">Lưu lịch sử BMI chưa thành công!</string>
</resources>